# main/http_server/axe-os/src/app/components/edit/edit.component.ts
@@ -183,6 +183,8 @@ export class EditComponent implements OnInit, OnDestroy, OnChanges {
           coreVoltage: [info.coreVoltage, [Validators.required]],
           frequency: [info.frequency, [Validators.required]],
           autotuneEnabled: [info.autotuneEnabled == 1],
+          autotuneMaxVoltage: [info.autotuneMaxVoltage, [Validators.min(0)]],
+          autotuneMaxFrequency: [info.autotuneMaxFrequency, [Validators.min(0)]],
           autofanspeed: [info.autofanspeed == 1, [Validators.required]],
           minFanSpeed: [info.minFanSpeed, [Validators.required]],
           manualFanSpeed: [info.manualFanSpeed, [Validators.required]],
@@ -382,6 +384,8 @@ export class EditComponent implements OnInit, OnDestroy, OnChanges {
       'coreVoltage',
       'frequency',
       'autotuneEnabled',
+      'autotuneMaxVoltage',
+      'autotuneMaxFrequency',
       'autofanspeed',
       'minFanSpeed',
       'manualFanSpeed',
